--- a/carrito.html
+++ b/carrito.html
@@ -117,7 +117,7 @@
           setTimeout(terminarPedido, tiempoTotal*60000);
         } else {
           alert("Pedido enviado. Volviendo a la página principal.");
-          window.location.href='index2.html';
+          window.location.href='index.html';
         }
       });
     } else {
