--- a/contacto.html
+++ b/contacto.html
@@ -177,8 +177,8 @@
 <body>
 
   <header>
-    <div class="logo" onclick="window.location.href='index2.html'">
-      <img src="/home/mauro/Documents/pagina-comercial/logo.jpeg" alt="Logo de Coffee House" id="logo-img">
+    <div class="logo" onclick="window.location.href='precio'">
+      <img src="logo.jpeg" alt="Logo de Coffee House" id="logo-img">
       Coffee House
     </div>
 
