--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
   <header>
     <div class="logo">
-      <img src="/home/mauro/Documents/pagina-comercial/logo.jpeg" alt="Logo de Coffee House" id="logo-img">
+      <img src="logo.jpeg" alt="Logo de Coffee House" id="logo-img">
       Coffee House
     </div>
 
