--- a/precios.html
+++ b/precios.html
@@ -147,7 +147,7 @@
 
   <header>
     <div class="left-controls" style="align-items:center;">
-      <div class="logo" onclick="window.location.href='index2.html'">
+      <div class="logo" onclick="window.location.href='index.html'">
         <img src="logo.jpeg" alt="Logo Coffee House">
         <div style="display:flex;flex-direction:column;line-height:1">
           <span style="font-size:1rem">Coffee House</span>
