--- a/precios.html
+++ b/precios.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Coffee House - Menú Premium</title>
+<title>Coffee House</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 <style>
   *{margin:0;padding:0;box-sizing:border-box;font-family:"Poppins",sans-serif}
@@ -150,8 +150,8 @@
       <div class="logo" onclick="window.location.href='index.html'">
         <img src="logo.jpeg" alt="Logo Coffee House">
         <div style="display:flex;flex-direction:column;line-height:1">
-          <span style="font-size:1rem">Coffee House</span>
-          <small style="font-weight:400;opacity:.85">Menú Premium</small>
+          <span style="font-size:1rem">MENÙ</span>
+         
         </div>
       </div>
     </div>
@@ -173,63 +173,76 @@
   <main>
     <!-- Cafés -->
     <div class="categoria"><h3>Cafés & Especialidades</h3><small>Seleccioná para ver fondo</small></div>
-    <div class="producto" data-nombre="Espresso Doble" data-precio="450">
-      <img src="https://images.unsplash.com/photo-1623334044303-241021148842?fm=jpg&ixlib=rb-4.1.0&q=60&w=1600" alt="Café especial">
-      <div class="info"><h4>Espresso Doble</h4><p>Con crema intensa y cuerpo completo. $450</p></div>
+    <div class="producto" data-nombre="Espresso Doble" data-precio="5450">
+      <img src="cafe1.jpg" alt="Café especial">
+      <div class="info"><h4>Espresso Doble</h4><p>Con crema intensa y cuerpo completo. $5450</p></div>
     </div>
-    <div class="producto" data-nombre="Cappuccino Clásico" data-precio="550">
-      <img src="https://images.unsplash.com/photo-1568254183919-78a4f43a2877?fm=jpg&ixlib=rb-4.1.0&q=60&w=1600" alt="Cappuccino">
-      <div class="info"><h4>Cappuccino Clásico</h4><p>Espuma densa, aroma a cacao. $550</p></div>
+    <div class="producto" data-nombre="Cappuccino Clásico" data-precio="4550">
+      <img src="cafe2.jpg"Cappuccino">
+      <div class="info"><h4>Cappuccino Clásico</h4><p>Espuma densa, aroma a cacao. $4550</p></div>
     </div>
-    <div class="producto" data-nombre="Cold Brew" data-precio="500">
-      <img src="https://images.unsplash.com/photo-1592663527359-cf6642f54cff?fm=jpg&ixlib=rb-4.1.0&q=60&w=1600" alt="Cold brew">
-      <div class="info"><h4>Cold Brew</h4><p>Extracción fría, sabor suave y limpio. $500</p></div>
+    <div class="producto" data-nombre="Cold Brew" data-precio="5000">
+      <img src="cafe3.jpg" alt="Cold brew">
+      <div class="info"><h4>Cafè latte</h4><p>Extracción fría, sabor suave y limpio. $5000</p></div>
     </div>
-    <div class="producto" data-nombre="Latte Vainilla" data-precio="600">
-      <img src="https://images.unsplash.com/photo-1518057111178-44a106bad636?fm=jpg&ixlib=rb-4.1.0&q=60&w=1600" alt="Latte">
-      <div class="info"><h4>Latte Vainilla</h4><p>Suave, con espuma sedosa y toque de vainilla. $600</p></div>
+    <div class="producto" data-nombre="Latte Vainilla" data-precio="3600">
+      <img src="cafe4.jpg" alt="Latte">
+      <div class="info"><h4>Cafe americano</h4><p>Cafè negro con suave dulsura y esquisito $3600</p></div>
     </div>
 
     <!-- Desayunos -->
     <div class="categoria"><h3>Desayunos & Bocadillos</h3><small>Combos ideales para la mañana</small></div>
-    <div class="producto" data-nombre="Desayuno Completo" data-precio="650">
-      <img src="https://images.unsplash.com/photo-1702742322469-36315505728f?fm=jpg&ixlib=rb-4.1.0&q=60&w=1600" alt="Desayuno completo">
-      <div class="info"><h4>Desayuno Completo</h4><p>Bebida + bagel + jugo natural. $650</p></div>
+    <div class="producto" data-nombre="Tostadas" data-precio="3600">
+      <img src="almuerzo1.jpg" alt="Tostada">
+      <div class="info"><h4>Tostadas</h4><p>tostada de jamon queso  $3600</p></div>
     </div>
-    <div class="producto" data-nombre="Tostada de Palta" data-precio="480">
-      <img src="https://images.unsplash.com/photo-1495474472287-4d71bcdd2085?fm=jpg&ixlib=rb-4.1.0&q=60&w=1600" alt="Tostadas">
-      <div class="info"><h4>Tostada de Palta</h4><p>Pan artesanal, palta, semillas y limón. $480</p></div>
+    <div class="producto" data-nombre="chocotorta" data-precio="7080">
+      <img src="almuerzo2.jpg" alt="<chocotorta">
+      <div class="info"><h4>chocotorta</h4><p>Porcion bastante grande para una persona. $7080</p></div>
     </div>
-    <div class="producto" data-nombre="Muffin de Arándanos" data-precio="400">
-      <img src="https://images.unsplash.com/photo-1555507036-ab1f4038808a?fm=jpg&ixlib=rb-4.1.0&q=60&w=1600" alt="Muffin arandanos">
-      <div class="info"><h4>Muffin de Arándanos</h4><p>Esponjoso, con arándanos reales. $400</p></div>
+    <div class="producto" data-nombre="Wafles" data-precio="2200">
+      <img src="almuerzo3.jpg" alt="Wafles">
+      <div class="info"><h4>Wafles</h4><p>porcion que contiene frutos y miel a gusto. $2200</p></div>
     </div>
-    <div class="producto" data-nombre="Bagel con Q.C." data-precio="420">
-      <img src="https://images.unsplash.com/photo-1528699633788-424224dc89b5?fm=jpg&ixlib=rb-4.1.0&q=60&w=1600" alt="Bagel">
-      <div class="info"><h4>Bagel con Q.C.</h4><p>Clásico, con queso crema y hierbas. $420</p></div>
+    <div class="producto" data-nombre="sanguche de miga" data-precio="2200">
+      <img src="almuerzo4.jpg" alt="sanguche de miga">
+      <div class="info"><h4>sanguche de miga</h4><p>porcion para una persona con jamon y queso. $2200</p></div>
     </div>
 
     <!-- Facturas / Pastelería -->
     <div class="categoria"><h3>Facturas & Pastelería</h3><small>Horneado diario</small></div>
-    <div class="producto" data-nombre="Croissant de Manteca" data-precio="350">
-      <img src="https://images.unsplash.com/photo-1623334044303-241021148842?fm=jpg&ixlib=rb-4.1.0&q=60&w=1600" alt="Croissants">
-      <div class="info"><h4>Croissant de Manteca</h4><p>Hojaldre clásico, flakey y dorado. $350</p></div>
+    <div class="producto" data-nombre="tortitas" data-precio="350">
+      <img src="factura1.JPG" alt="torticas">
+      <div class="info"><h4>Tortitas negras</h4><p>facturas de masa dulce con azurcar quemada. $350c/u</p></div>
     </div>
-    <div class="producto" data-nombre="Medialuna Rellena" data-precio="300">
-      <img src="https://images.unsplash.com/photo-1568254183919-78a4f43a2877?fm=jpg&ixlib=rb-4.1.0&q=60&w=1600" alt="Medialunas">
-      <div class="info"><h4>Medialuna Rellena</h4><p>Con dulce de leche o crema. $300</p></div>
+    <div class="producto" data-nombre="Medialuna " data-precio="300">
+      <img src="factura2.jpg" alt="Medialuna">
+      <div class="info"><h4>Medialunas</h4><p>Con dulce de leche o crema. $300c/u</p></div>
     </div>
-    <div class="producto" data-nombre="Scone con Mermelada" data-precio="330">
-      <img src="https://images.unsplash.com/photo-1702742322469-36315505728f?fm=jpg&ixlib=rb-4.1.0&q=60&w=1600" alt="Scones">
-      <div class="info"><h4>Scone con Mermelada</h4><p>Tradicional, perfecto con té. $330</p></div>
+    <div class="producto" data-nombre="Donas" data-precio="330">
+      <img src="factura3.jpg" alt="Donas">
+      <div class="info"><h4>Donas</h4><p>solas o rellenas con dulceo crema. $1000</p></div>
     </div>
-    <div class="producto" data-nombre="Danish de Almendra" data-precio="380">
-      <img src="https://images.unsplash.com/photo-1555507036-ab1f4038808a?fm=jpg&ixlib=rb-4.1.0&q=60&w=1600" alt="Danish">
-      <div class="info"><h4>Danish de Almendra</h4><p>Relleno con crema y almendra crocante. $380</p></div>
+    <div class="producto" data-nombre="Churros" data-precio="380">
+      <img src="factura4.jpg" alt="Churros">
+      <div class="info"><h4>Churros</h4><p>rikisimos con o sin relleno. $800c/u</p></div>
     </div>
   </main>
 
-  <footer id="pageFooter">© Coffee House 2025</footer>
+  <footer id="pageFooter">© Coffee House 2025
+   <div style="margin-top:10px; display:flex; justify-content:center; gap:18px;"><a href="#" style="display:inline-flex; background:#4caf50; padding:10px; border-radius:50%;">
+  <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" width="22" style="filter:invert(1);">
+</a>
+
+<a href="#" style="display:inline-flex; background:#3b5998; padding:10px; border-radius:50%;">
+  <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" width="22" style="filter:invert(1);">
+</a>
+
+<a href="#" style="display:inline-flex; background:#d35400; padding:10px; border-radius:50%;">
+  <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" width="22" style="filter:invert(1);">
+</a>
+
+  </footer>
 
   <audio id="bgAudio" loop crossorigin="anonymous">
     <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_6b94055143.mp3?filename=relaxing-coffee-shop-ambient-111684.mp3" type="audio/mpeg">
