--- a/contacto.html
+++ b/contacto.html
@@ -177,7 +177,7 @@
 <body>
 
   <header>
-    <div class="logo" onclick="window.location.href='precio'">
+    <div class="logo" onclick="window.location.href='index.html'">
       <img src="logo.jpeg" alt="Logo de Coffee House" id="logo-img">
       Coffee House
     </div>
@@ -202,12 +202,12 @@
         <p><strong>Dirección:</strong> Arturo Jaureche 9857, Moreno, Villanueva, Buenos Aires, Argentina</p>
         <p><strong>Horarios:</strong> Lunes a Viernes: 7:00 AM - 8:00 PM | Sábados y Domingos: 8:00 AM - 6:00 PM</p>
         <p><strong>Teléfono:</strong> +54 11 1234-5678</p>
-        <p><strong>Email:</strong> contacto@coffeehouse.com.ar</p>
+        <p><strong>Instagram:</strong> contacto@coffeehouse.com.ar</p>
         <p><strong>Descripción:</strong> Nuestro local en Moreno ofrece el mejor café artesanal en un ambiente acogedor. Vení a disfrutar de nuestros productos frescos y el servicio excepcional.</p>
       </div>
 
       <div class="map-container">
-        <!-- Mapa embebido de Google Maps centrado en la dirección (coordenadas aproximadas: -34.6534, -58.7919) -->
+      
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.1234!2d-58.7919!3d-34.6534!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzTCsDM5JzEyLjIiUyA1OMKwNDcnMzEuMCJX!5e0!3m2!1ses!2sar!4v1690000000000!5m2!1ses!2sar" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
