Replace food items in precios.html

--- a/precios.html
+++ b/precios.html
@@ -314,21 +314,21 @@
             <img src="almuerzo5.jpg" alt="Chipa">
             <div class="info"><h4>Chipa</h4><p>masa de maiz y almidon con o sin relleno. $3100</p></div>
           </div>
-          <div class="producto" data-nombre="Croissant Relleno" data-precio="4200" data-img="almuerzo6.jpg">
-            <img src="almuerzo6.jpg" alt="Croissant Relleno">
-            <div class="info"><h4>Croissant Relleno</h4><p>Croissant con jamón crudo y queso brie. $4200</p></div>
+          <div class="producto" data-nombre="Sopa" data-precio="4200" data-img="almuerzo6.jpg">
+            <img src="almuerzo6.jpg" alt="Sopa">
+            <div class="info"><h4>Sopa paraguaya</h4><p>rica masa de maiz y con crema. $4200</p></div>
           </div>
-          <div class="producto" data-nombre="Omelette Clásico" data-precio="5500" data-img="almuerzo7.jpg">
-            <img src="almuerzo7.jpg" alt="Omelette Clásico">
-            <div class="info"><h4>Omelette Clásico</h4><p>Huevos, queso y hierbas frescas. $5500</p></div>
+          <div class="producto" data-nombre="Cupcake" data-precio="5500" data-img="almuerzo7.jpg">
+            <img src="almuerzo7.jpg" alt="Cupcake">
+            <div class="info"><h4>Cupcake</h4><p>De chocolate, vainilla y limon. $5500</p></div>
           </div>
-          <div class="producto" data-nombre="Tostado de Palta" data-precio="4800" data-img="almuerzo8.jpg">
-            <img src="almuerzo8.jpg" alt="Tostado de Palta">
-            <div class="info"><h4>Tostado de Palta</h4><p>Pan de masa madre, palta pisada y huevo poché. $4800</p></div>
+          <div class="producto" data-nombre="croissant " data-precio="4800" data-img="almuerzo8.jpg">
+            <img src="almuerzo8.jpg" alt="croissant ">
+            <div class="info"><h4>croissant </h4><p>con jamón y queso. $4800</p></div>
           </div>
-          <div class="producto" data-nombre="Pancakes con Syrup" data-precio="4000" data-img="almuerzo9.jpg">
-            <img src="almuerzo9.jpg" alt="Pancakes con Syrup">
-            <div class="info"><h4>Pancakes con Syrup</h4><p>Tres pancakes esponjosos con miel de arce. $4000</p></div>
+          <div class="producto" data-nombre="Tostada" data-precio="4000" data-img="almuerzo9.jpg">
+            <img src="almuerzo9.jpg" alt="Tostada">
+            <div class="info"><h4>tostada><p>caleinte tostada con aderezo a gusto. $4000</p></div>
           </div>
         </div>
         <button class="nav-btn right" data-target="carousel-desayuno">&gt;</button>
