Remove comment from background color in contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,7 @@
       display: grid;
       grid-template-rows: auto 1fr auto;
       min-height: 100vh;
-      background-color: #8d6e63;  /* Marrón más claro que el del header (#5d4037) */
+      background-color: #8d6e63;  
       color: #3e2723;
     }
 
