Fix typos in category and update social links

--- a/precios.html
+++ b/precios.html
@@ -243,7 +243,7 @@
   <main>
     
     <div class="categoria-wrapper">
-      <div class="categoria"><h3>Cafés & Beidas</h3><small></small></div>
+      <div class="categoria"><h3>Cafés & Bebidas</h3><small></small></div>
       <div class="carousel-container">
         <button class="nav-btn left" data-target="carousel-cafe">&lt;</button>
         <div class="carousel-productos" id="carousel-cafe">
@@ -382,18 +382,18 @@
 
   </main>
 
-  <footer id="pageFooter">© Coffee House 2025
+ <footer id="pageFooter">© Coffee House 2025
    <div style="margin-top:10px; display:flex; justify-content:center; gap:18px;">
-     <a href="#" style="display:inline-flex; background:#4caf50; padding:10px; border-radius:50%;">
-      <img src="https://wa.me/5491126868237" width="22" style="filter:invert(1);">
+     <a href="https://wa.me/5491126868237" style="display:inline-flex; background:#4caf50; padding:10px; border-radius:50%;">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" width="22" style="filter:invert(1);">
     </a>
 
-    <a href="#" style="display:inline-flex; background:#3b5998; padding:10px; border-radius:50%;">
-      <img src="https://www.facebook.com/mauro200dom" width="22" style="filter:invert(1);">
+    <a href="https://www.instagram.com/coffeehousee2025" style="display:inline-flex; background:#3b5998; padding:10px; border-radius:50%;">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" width="22" style="filter:invert(1);">
     </a>
 
-    <a href="#" style="display:inline-flex; background:#d35400; padding:10px; border-radius:50%;">
-      <img src="https://www.instagram.com/coffehousee2025/?utm_source=ig_web_button_share_sheet" width="22" style="filter:invert(1);">
+    <a href="https://www.facebook.com/Mauro Dominguez" style="display:inline-flex; background:#d35400; padding:10px; border-radius:50%;">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" width="22" style="filter:invert(1);">
     </a>
   </div>
   </footer>
