Update footer with social media links and styles

--- a/index.html
+++ b/index.html
@@ -106,22 +106,21 @@
     <p>Disfrutá del aroma, el sabor y la experiencia del mejor café artesanal</p>
     <a href="precios.html"><button class="btn">Ver ofertas</button></a>
   </div>
-</section><footer>
-  <p>© 2025 Coffee House — El sabor que te despierta cada día</p>
-  <div style="margin-top:10px; display:flex; justify-content:center; gap:18px;"><a href="#" style="display:inline-flex; background:#4caf50; padding:10px; border-radius:50%;">
-  <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" width="22" style="filter:invert(1);">
-</a>
+</section> <footer id="pageFooter">© Coffee House 2025
+   <div style="margin-top:10px; display:flex; justify-content:center; gap:18px;">
+     <a href="https://wa.me/5491126868237" style="display:inline-flex; background:#4caf50; padding:10px; border-radius:50%;">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" width="22" style="filter:invert(1);">
+    </a>
 
-<a href="#" style="display:inline-flex; background:#3b5998; padding:10px; border-radius:50%;">
-  <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" width="22" style="filter:invert(1);">
-</a>
+    <a href="https://www.instagram.com/coffeehousee2025" style="display:inline-flex; background:#3b5998; padding:10px; border-radius:50%;">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" width="22" style="filter:invert(1);">
+    </a>
 
-<a href="#" style="display:inline-flex; background:#d35400; padding:10px; border-radius:50%;">
-  <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" width="22" style="filter:invert(1);">
-</a>
-
+    <a href="https://www.facebook.com/Mauro Dominguez" style="display:inline-flex; background:#d35400; padding:10px; border-radius:50%;">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" width="22" style="filter:invert(1);">
+    </a>
   </div>
-</footer><script>
+  </footer><script>
   const toggle=document.getElementById("toggle"), menu=document.getElementById("menu"); toggle.onclick=()=>menu.classList.toggle("active");
   let slides=document.querySelectorAll(".fade-slide"),i=0; setInterval(()=>{slides[i].classList.remove("active"); i=(i+1)%slides.length; slides[i].classList.add("active")},5000);
 </script></body>
