Update contact information for Coffee House

--- a/contacto.html
+++ b/contacto.html
@@ -201,8 +201,8 @@
         <h2>Coffee House - Local Moreno</h2>
         <p><strong>Dirección:</strong> Arturo Jaureche 9857, Moreno, Villanueva, Buenos Aires, Argentina</p>
         <p><strong>Horarios:</strong> Lunes a Viernes: 7:00 AM - 8:00 PM | Sábados y Domingos: 8:00 AM - 6:00 PM</p>
-        <p><strong>Teléfono:</strong> +54 11 1234-5678</p>
-        <p><strong>Instagram:</strong> contacto@coffeehouse.com.ar</p>
+        <p><strong>Teléfono:</strong> +54 11 2686-8237</p>
+        <p><strong>Instagram:</strong> caffehousee2025</p>
         <p><strong>Descripción:</strong> Nuestro local en Moreno ofrece el mejor café artesanal en un ambiente acogedor. Vení a disfrutar de nuestros productos frescos y el servicio excepcional.</p>
       </div>
 
