--- a/precios.html
+++ b/precios.html
@@ -388,16 +388,15 @@
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" width="22" style="filter:invert(1);">
     </a>
 
-    <a href="https://www.instagram.com/coffeehousee2025" style="display:inline-flex; background:#3b5998; padding:10px; border-radius:50%;">
+    <a href="https://www.facebook.com/Mauro Dominguez" style="display:inline-flex; background:#3b5998; padding:10px; border-radius:50%;">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" width="22" style="filter:invert(1);">
     </a>
 
-    <a href="https://www.facebook.com/Mauro Dominguez" style="display:inline-flex; background:#d35400; padding:10px; border-radius:50%;">
+    <a href="https://www.instagram.com/coffeehousee2025" style="display:inline-flex; background:#d35400; padding:10px; border-radius:50%;">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" width="22" style="filter:invert(1);">
     </a>
   </div>
   </footer>
-
   <audio id="bgAudio" loop crossorigin="anonymous">
     <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_6b94055143.mp3?filename=relaxing-coffee-shop-ambient-111684.mp3" type="audio/mpeg">
   </audio>
