--- a/precios.html
+++ b/precios.html
@@ -392,7 +392,7 @@
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" width="22" style="filter:invert(1);">
     </a>
 
-    <a href="https://www.instagram.com/coffeehousee2025" style="display:inline-flex; background:#d35400; padding:10px; border-radius:50%;">
+    <a href="https://www.instagram.com/coffeehousee2025md" style="display:inline-flex; background:#d35400; padding:10px; border-radius:50%;">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" width="22" style="filter:invert(1);">
     </a>
   </div>
