Update prices for various food items

--- a/precios.html
+++ b/precios.html
@@ -293,41 +293,41 @@
       <div class="carousel-container">
         <button class="nav-btn left" data-target="carousel-desayuno">&lt;</button>
         <div class="carousel-productos" id="carousel-desayuno">
-          <div class="producto" data-nombre="Tostadas" data-precio="3600" data-img="almuerzo1.jpg">
+          <div class="producto" data-nombre="Tostadas" data-precio="2000" data-img="almuerzo1.jpg">
             <img src="almuerzo1.jpg" alt="Tostada">
-            <div class="info"><h4>Tostadas</h4><p>tostada de jamon queso  $3600</p></div>
+            <div class="info"><h4>Tostadas</h4><p>tostada de jamon queso  $2000</p></div>
           </div>
           <div class="producto" data-nombre="chocotorta" data-precio="7080" data-img="almuerzo2.jpg">
             <img src="almuerzo2.jpg" alt="chocotorta">
             <div class="info"><h4>chocotorta</h4><p>Porcion bastante grande para una persona. $7080</p></div>
           </div>
-          <div class="producto" data-nombre="Wafles" data-precio="2200" data-img="almuerzo3.jpg">
+          <div class="producto" data-nombre="Wafles" data-precio="2000" data-img="almuerzo3.jpg">
             <img src="almuerzo3.jpg" alt="Wafles">
-            <div class="info"><h4>Wafles</h4><p>porcion que contiene frutos y miel a gusto. $2200</p></div>
+            <div class="info"><h4>Wafles</h4><p>porcion que contiene frutos y miel a gusto. $2000</p></div>
           </div>
           <div class="producto" data-nombre="sanwinch de miga" data-precio="2200" data-img="almuerzo4.jpg">
             <img src="almuerzo4.jpg" alt="sanwinch de miga">
             <div class="info"><h4>sanwinche miga</h4><p>porcion para una persona con jamon y queso. $2200</p></div>
           </div>
-          <div class="producto" data-nombre="Chipa" data-precio="3100" data-img="almuerzo5.jpg">
+          <div class="producto" data-nombre="Chipa" data-precio="500" data-img="almuerzo5.jpg">
             <img src="almuerzo5.jpg" alt="Chipa">
-            <div class="info"><h4>Chipa</h4><p>masa de maiz y almidon con o sin relleno. $3100</p></div>
+            <div class="info"><h4>Chipa</h4><p>con mucho relleno. $500c/u</p></div>
           </div>
-          <div class="producto" data-nombre="Sopa" data-precio="4200" data-img="almuerzo6.jpg">
+          <div class="producto" data-nombre="Sopa" data-precio="2200" data-img="almuerzo6.jpg">
             <img src="almuerzo6.jpg" alt="Sopa">
-            <div class="info"><h4>Sopa paraguaya</h4><p>rica masa de maiz y con crema. $4200</p></div>
+            <div class="info"><h4>Sopa paraguaya</h4><p>echo con masa de harina de maiz,queso y cebolla. $2200</p></div>
           </div>
-          <div class="producto" data-nombre="Cupcake" data-precio="5500" data-img="almuerzo7.jpg">
+          <div class="producto" data-nombre="Cupcake" data-precio="1500" data-img="almuerzo7.jpg">
             <img src="almuerzo7.jpg" alt="Cupcake">
-            <div class="info"><h4>Cupcake</h4><p>De chocolate, vainilla y limon. $5500</p></div>
+            <div class="info"><h4>Cupcake</h4><p>De chocolate, vainilla y limon. $1500</p></div>
           </div>
-          <div class="producto" data-nombre="croissant " data-precio="4800" data-img="almuerzo8.jpg">
+          <div class="producto" data-nombre="croissant " data-precio="2000" data-img="almuerzo8.jpg">
             <img src="almuerzo8.jpg" alt="croissant ">
-            <div class="info"><h4>croissant </h4><p>con jamón y queso. $4800</p></div>
+            <div class="info"><h4>croissant </h4><p>con jamón y queso. $2000</p></div>
           </div>
-          <div class="producto" data-nombre="Tostada" data-precio="4000" data-img="almuerzo9.jpg">
+          <div class="producto" data-nombre="Tostada" data-precio="1200" data-img="almuerzo9.jpg">
             <img src="almuerzo9.jpg" alt="Tostada">
-            <div class="info"><h4>tostada><p>caleinte tostada con aderezo a gusto. $4000</p></div>
+            <div class="info"><h4>tostada><p>caleinte tostada con aderezo a gusto. $1200</p></div>
           </div>
         </div>
         <button class="nav-btn right" data-target="carousel-desayuno">&gt;</button>
@@ -347,11 +347,11 @@
             <img src="factura2.jpg" alt="Medialuna">
             <div class="info"><h4>Medialunas</h4><p>Con dulce de leche o crema. $300c/u</p></div>
           </div>
-          <div class="producto" data-nombre="Donas" data-precio="330" data-img="factura3.jpg">
+          <div class="producto" data-nombre="Donas" data-precio="800" data-img="factura3.jpg">
             <img src="factura3.jpg" alt="Donas">
-            <div class="info"><h4>Donas</h4><p>solas o rellenas con dulceo crema. $1000c/u</p></div>
+            <div class="info"><h4>Donas</h4><p>solas o rellenas con dulceo crema. $800c/u</p></div>
           </div>
-          <div class="producto" data-nombre="Churros" data-precio="380" data-img="factura4.jpg">
+          <div class="producto" data-nombre="Churros" data-precio="800" data-img="factura4.jpg">
             <img src="factura4.jpg" alt="Churros">
             <div class="info"><h4>Churros</h4><p>rikisimos con o sin relleno. $800c/u</p></div>
           </div>
@@ -359,17 +359,17 @@
             <img src="factura5.jpg" alt="Brownies">
             <div class="info"><h4>Brownies</h4><p>Esponjoso y lleno de chocolate. $1200c/u</p></div>
           </div>
-          <div class="producto" data-nombre="Panqueques" data-precio="500" data-img="factura6.jpg">
+          <div class="producto" data-nombre="Panqueques" data-precio="1500" data-img="factura6.jpg">
             <img src="factura6.jpg" alt="Panqueques">
-            <div class="info"><h4>Panqueques</h4><p>Masa esponjosa y dulce. $500c/u</p></div>
+            <div class="info"><h4>Panqueques</h4><p>Masa esponjosa y dulce. $1500c/u</p></div>
           </div>
-          <div class="producto" data-nombre="Cookies" data-precio="1500" data-img="factura7.jpg">
+          <div class="producto" data-nombre="Cookies" data-precio="400" data-img="factura7.jpg">
             <img src="factura7.jpg" alt="Cookies">
-            <div class="info"><h4>Cookies</h4><p>galletas dulces con chhips de chocolate. $1500</p></div>
+            <div class="info"><h4>Cookies</h4><p>galletas dulces con chhips de chocolate. $400</p></div>
           </div>
-          <div class="producto" data-nombre="Torta" data-precio="450" data-img="factura8.jpg">
+          <div class="producto" data-nombre="Torta" data-precio="2300" data-img="factura8.jpg">
             <img src="factura8.jpg" alt="Torta">
-            <div class="info"><h4>Torta</h4><p>torta de chocolate . $450c/u</p></div>
+            <div class="info"><h4>Torta</h4><p>torta de chocolate . $2300c/u</p></div>
           </div>
           <div class="producto" data-nombre="Pastafrora" data-precio="1350" data-img="factura9.jpg">
             <img src="factura9.jpg" alt="Pastafrora">
